; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/kernel32/wine/extr_comm.c_COMM_ParseParity.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/kernel32/wine/extr_comm.c_COMM_ParseParity.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EVENPARITY = common dso_local global i32 0, align 4
@MARKPARITY = common dso_local global i32 0, align 4
@NOPARITY = common dso_local global i32 0, align 4
@ODDPARITY = common dso_local global i32 0, align 4
@SPACEPARITY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32*)* @COMM_ParseParity to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @COMM_ParseParity(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = getelementptr inbounds i32, i32* %6, i32 1
  store i32* %7, i32** %4, align 8
  %8 = load i32, i32* %6, align 4
  %9 = call i32 @toupperW(i32 %8)
  switch i32 %9, label %25 [
    i32 69, label %10
    i32 77, label %13
    i32 78, label %16
    i32 79, label %19
    i32 83, label %22
  ]

10:                                               ; preds = %2
  %11 = load i32, i32* @EVENPARITY, align 4
  %12 = load i32*, i32** %5, align 8
  store i32 %11, i32* %12, align 4
  br label %26

13:                                               ; preds = %2
  %14 = load i32, i32* @MARKPARITY, align 4
  %15 = load i32*, i32** %5, align 8
  store i32 %14, i32* %15, align 4
  br label %26

16:                                               ; preds = %2
  %17 = load i32, i32* @NOPARITY, align 4
  %18 = load i32*, i32** %5, align 8
  store i32 %17, i32* %18, align 4
  br label %26

19:                                               ; preds = %2
  %20 = load i32, i32* @ODDPARITY, align 4
  %21 = load i32*, i32** %5, align 8
  store i32 %20, i32* %21, align 4
  br label %26

22:                                               ; preds = %2
  %23 = load i32, i32* @SPACEPARITY, align 4
  %24 = load i32*, i32** %5, align 8
  store i32 %23, i32* %24, align 4
  br label %26

25:                                               ; preds = %2
  store i32* null, i32** %3, align 8
  br label %28

26:                                               ; preds = %22, %19, %16, %13, %10
  %27 = load i32*, i32** %4, align 8
  store i32* %27, i32** %3, align 8
  br label %28

28:                                               ; preds = %26, %25
  %29 = load i32*, i32** %3, align 8
  ret i32* %29
}

declare dso_local i32 @toupperW(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
